--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="footer">
     <a href="http://codeforcroatia.org">Programiraj za Hrvatsku</a> 
     &ndash;
-    <a href="https://github.com/codeforcroatia/open-register-status">Izvorni kod ove aplikacije</a>
+    <a href="https://github.com/Kresh0/open-register-status">Neizvorni kod ove aplikacije</a>
     <a href="http://opendefinition.org/ossd/" title="Open Online Software Service">
       <img src="http://assets.okfn.org/images/ok_buttons/os_80x15_orange_grey.png" alt="" border="" />
     </a>
